# TripPlannerAgent

./: .dockerignore  .env.dev  .env.example  .gitignore  README.md  airports.sqlite  config.py  docker-compose.yml  dockerfile  main.py  pyproject.toml
db/: .env  agent.py  prompts.py
models/: models.py
scripts/: build-registry.py  deploy.py
sub_agents/ideator/: agent.py  prompt.py
sub_agents/planning/: agent.py  prompts.py
tools/: scrapper.py
